# finbro-app

./: pyproject.toml
app/backend/app/: download_model.py  main.py
app/backend/app/models/: DDL.sql  interface_database.py
app/backend/app/routers/: predict.py
app/backend/app/schemas/: classify.py
app/backend/app/services/: classifier.py  portfolio.py  test.ipynb  test.py
